--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT=5000
-MONGODB_URI=mongodb+srv://sodharmendra74:sodharmendra74@cluster300.zool2ru.mongodb.net/event_reviews
-JWT_SECRET=yourjwtsecret
+PORT = 5000
+DATABASE_URL="mongodb://localhost:27017"
+JWT_SECRET=dsjhfisfidshfherfiofih
